--- a/KiemTra_DoTranSang_1911061851/Views/SinhVien/Detail.cshtml
+++ b/KiemTra_DoTranSang_1911061851/Views/SinhVien/Detail.cshtml
@@ -55,5 +55,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaSV }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ListSV")
 </p>
